<resources>
    <string name="app_name">FilmExplorer</string>
    <string name="data_film">Data Film</string>
    <string name="masukkan_judul_film">Masukkan judul film</string>
    <string name="kirim">Kirim</string>
    <string name="poster_film">Poster film</string>
    <string name="judul">Judul</string>
    <string name="moana">Moana</string>
    <string name="_2016">2016</string>
    <string name="tahun">Tahun</string>
    <string name="genre">Genre</string>
    <string name="animation_adventure_comedy">Animation, Adventure, Comedy</string>
    <string name="director">Director</string>
    <string name="ron_clements_john_musker_don_hall">Ron Clements, John Musker, Don Hall</string>
    <string name="writer">Writer</string>
    <string name="jared_bush_ron_clements_john_musker">Jared Bush, Ron Clements, John Musker</string>
    <string name="actors">Actors</string>
    <string name="auli_i_cravalho_dwayne_johnson_rachel_house">Auli\'i Cravalho, Dwayne Johnson, Rachel House</string>
    <string name="reset">Reset</string>
    <string name="plot">Plot</string>
    <string name="in_ancient_polynesia_when_a_terrible_curse_incurred_by_the_demigod_maui_reaches_moana_s_island_she_answers_the_ocean_s_call_to_seek_out_maui_to_set_things_right">In ancient Polynesia, when a terrible curse incurred by the demigod Maui reaches Moana\'s island, she answers the Ocean\'s call to seek out Maui to set things right.</string>
    <string name="tell_us_about_your_favorite_movies">Tell us about your favorite movies</string>
    <string name="next">Next</string>
    <string name="explore_your_favorite_movies">Explore your favorite movies</string>
    <string name="sign_in">Sign In</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="don_t_you_have_an_account">Don’t you have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hey_eka">Hey, Eka</string>
    <string name="what_movie_do_you_want_to_watch_today">What movie do you want to watch today?</string>
    <string name="search_any_movies_name_here">Search any movies name here</string>
    <string name="recent_search">Recent Search</string>
    <string name="spiderman">Spiderman</string>
    <string name="_1990">1990</string>
    <string name="rating">Rating</string>
    <string name="_9_0">9.0</string>
    <string name="release_date">Release Date</string>
    <string name="duration">Duration</string>
    <string name="_5_min">5 min</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="action">Action</string>
    <string name="profile">Profile</string>
    <string name="john_doe">John Doe</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="favorite_films">Favorite Films</string>
    <string name="logout">Logout</string>
    <string name="masukkan_username">Masukkan username</string>
    <string name="masukkan_email">Masukkan email</string>
    <string name="masukkan_password">Masukkan password</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="abjad">Abjad</string>
    <string name="terbaru">Terbaru</string>
    <string name="terlama">Terlama</string>
    <string name="filter">Filter :</string>
    <string name="are_you_sure_you_want_to_delete_this_film">Are you sure you want to delete this film?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
</resources>