<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/edit_profile"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_dialog_input_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_input_dark_gray"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/masukkan_username"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/e_mail"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_dialog_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_input_dark_gray"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/masukkan_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_dialog_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_input_dark_gray"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/masukkan_password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:textAlignment="center">

        <Button
            android:id="@+id/btn_dialog_input_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_stroke_primary"
            android:fontFamily="@font/poppins_semi_bold"
            android:padding="4dp"
            android:text="@string/batal"
            android:textAllCaps="false"
            android:textColor="@color/primary" />

        <Button
            android:id="@+id/btn_dialog_input_simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/poppins_semi_bold"
            android:padding="4dp"
            android:text="@string/simpan"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
