<?xml version="1.0" encoding="UTF-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <RelativeLayout
            android:id="@+id/rel_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="16dp"
                android:text="@string/data_film"
                android:textColor="@color/purple_700"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_judul"
                android:layout_marginTop="16dp"
                android:hint="@string/masukkan_judul_film" />

            <LinearLayout
                android:id="@+id/layout_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_input"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_kirim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="5"
                    android:background="@color/purple_700"
                    android:text="@string/kirim"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:text="@string/reset"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_info_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_btn"
                android:layout_marginBottom="50dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="16dp"
                    android:contentDescription="@string/poster_film"
                    android:src="@drawable/img" />

                <LinearLayout
                    android:id="@+id/linear_layout_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/judul"
                        android:textColor="@color/purple_700" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/moana"
                        android:textColor="@color/purple_700" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/tahun"
                        android:textColor="@color/purple_700" />

                    <TextView
                        android:id="@+id/tv_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/_2016"
                        android:textColor="@color/purple_700" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/genre"
                        android:textColor="@color/purple_700" />

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/animation_adventure_comedy"
                        android:textColor="@color/purple_700" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/director"
                        android:textColor="@color/purple_700" />

                    <TextView
                        android:id="@+id/tv_director"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ron_clements_john_musker_don_hall"
                        android:textColor="@color/purple_700" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/writer"
                        android:textColor="@color/purple_700" />

                    <TextView
                        android:id="@+id/tv_writer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/jared_bush_ron_clements_john_musker"
                        android:textColor="@color/purple_700" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/actors"
                        android:textColor="@color/purple_700" />

                    <TextView
                        android:id="@+id/tv_actors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/auli_i_cravalho_dwayne_johnson_rachel_house"
                        android:textColor="@color/purple_700" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/plot"
                        android:textColor="@color/purple_700" />

                    <TextView
                        android:id="@+id/tv_plot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/in_ancient_polynesia_when_a_terrible_curse_incurred_by_the_demigod_maui_reaches_moana_s_island_she_answers_the_ocean_s_call_to_seek_out_maui_to_set_things_right"
                        android:textColor="@color/purple_700" />
                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>
